--- a/hello-backend/Dockerfile.gradle
+++ b/hello-backend/Dockerfile.gradle
@@ -1,11 +1,12 @@
 # -- BUILD --
-FROM maven:3.9.6-eclipse-temurin as build
+FROM gradle:8.6-jdk21-alpine as build
 
 WORKDIR /usr/src/app
 
 COPY . .
 
-RUN mvn -f /usr/src/app/pom.xml clean package
+RUN gradle init
+RUN gradle build
 
 # -- RELEASE --
 FROM openjdk:23-jdk
@@ -13,7 +14,7 @@ FROM openjdk:23-jdk
 WORKDIR /app
 
 COPY --from=build /usr/src/app/entrypoint.sh entrypoint.sh
-COPY --from=build /usr/src/app/target/hello-backend-*.jar hello-backend.jar
+COPY --from=build /usr/src/app/build/libs/hello-backend-*.jar hello-backend.jar
 
 EXPOSE 9000 9001
 
