--- a/hello-backend/Dockerfile.gradle
+++ b/hello-backend/Dockerfile.gradle
@@ -13,9 +13,7 @@ FROM openjdk:23-jdk
 
 WORKDIR /app
 
-COPY --from=build /usr/src/app/entrypoint.sh entrypoint.sh
 COPY --from=build /usr/src/app/build/libs/hello-backend-*.jar hello-backend.jar
-
-EXPOSE 9000 9001
+COPY entrypoint.sh entrypoint.sh
 
 ENTRYPOINT [ "./entrypoint.sh", "hello-backend.jar" ]
