--- a/hello-backend/Dockerfile.local
+++ b/hello-backend/Dockerfile.local
@@ -2,9 +2,7 @@ FROM openjdk:23-jdk
 
 WORKDIR /app
 
+COPY target/hello-backend-*.jar hello-backend.jar
 COPY entrypoint.sh entrypoint.sh
-COPY build/libs/hello-backend-*.jar hello-backend.jar
-
-EXPOSE 9000 9001
 
 ENTRYPOINT [ "./entrypoint.sh", "hello-backend.jar" ]
