--- a/hello-backend/src/main/resources/application.properties
+++ b/hello-backend/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 server.port=9001
+server.error.whitelabel.enabled=false
 management.endpoints.web.base-path=/
 management.endpoints.web.exposure.include=prometheus
