--- a/hello-prometheus/Dockerfile
+++ b/hello-prometheus/Dockerfile
@@ -1,3 +1,3 @@
 FROM prom/prometheus:v2.45.3
 
-COPY prometheus/prometheus.yml /etc/prometheus/prometheus.yml
+COPY prometheus.yml /etc/prometheus/prometheus.yml
