--- a/hello-prometheus/prometheus.yml
+++ b/hello-prometheus/prometheus.yml
@@ -10,6 +10,11 @@ scrape_configs:
     metrics_path: "/metrics"
     static_configs:
       - targets: ["localhost:9090"]
+  - job_name: "hello-grafana"
+    scrape_interval: 1m
+    metrics_path: "/metrics"
+    static_configs:
+      - targets: ["docker.for.mac.localhost:3000"]
   - job_name: "hello-frontend"
     scrape_interval: 30s
     metrics_path: "/prometheus"
