--- a/hello-bff/Dockerfile.gradle
+++ b/hello-bff/Dockerfile.gradle
@@ -13,7 +13,7 @@ FROM openjdk:23-jdk
 
 WORKDIR /app
 
-COPY --from=build /usr/src/app/build/libs/hello-backend-*.jar hello-backend.jar
+COPY --from=build /usr/src/app/build/libs/hello-bff-*.jar hello-bff.jar
 COPY entrypoint.sh entrypoint.sh
 
-ENTRYPOINT [ "./entrypoint.sh", "hello-backend.jar" ]
+ENTRYPOINT [ "./entrypoint.sh", "hello-bff.jar" ]
