--- a/hello-bff/pom.xml
+++ b/hello-bff/pom.xml
@@ -10,9 +10,9 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>hello-backend</artifactId>
+	<artifactId>hello-bff</artifactId>
 	<version>0.1.0</version>
-	<name>hello-backend</name>
+	<name>hello-bff</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
