--- a/hello-frontend/nginx/nginx.conf
+++ b/hello-frontend/nginx/nginx.conf
@@ -2,7 +2,7 @@ user  nginx;
 worker_processes  auto;
 
 error_log  /var/log/nginx/error.log notice;
-pid        /var/run/nginx.pid;
+pid        /var/run/nginx/nginx.pid;
 
 load_module "modules/ndk_http_module.so";
 load_module "modules/ngx_http_lua_module.so";
