--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,8 @@ services:
       - "9001:9001"
     depends_on:
       - backend
+    environment:
+      - BACKEND_URL=http://docker.for.mac.localhost:9002
   frontend:
     image: hello-frontend:latest
     container_name: "hello_frontend"
@@ -19,6 +21,8 @@ services:
       - "9000:9000"
     depends_on:
       - bff
+    environment:
+      - REACT_APP_BFF_URL=http://docker.for.mac.localhost:9001
   prometheus:
     image: hello-prometheus:latest
     container_name: "hello_prometheus"
