--- a/hello-prometheus/prometheus.yml
+++ b/hello-prometheus/prometheus.yml
@@ -25,3 +25,8 @@ scrape_configs:
     metrics_path: "/prometheus"
     static_configs:
       - targets: ["docker.for.mac.localhost:9001"]
+  - job_name: "hello-backend"
+    scrape_interval: 30s
+    metrics_path: "/prometheus"
+    static_configs:
+      - targets: ["docker.for.mac.localhost:9002"]
