--- a/hello-frontend/nginx/prometheus.conf
+++ b/hello-frontend/nginx/prometheus.conf
@@ -19,8 +19,13 @@ log_by_lua_block {
 
 server {
   listen 9000;
+  server_name frontend;
 
   root /usr/share/nginx/html/;
+
+  location /error {
+    return 500;
+  }
 
   location /prometheus {
     access_log off;
