change metrics endpoint

--- a/hello-frontend/nginx/prometheus.conf
+++ b/hello-frontend/nginx/prometheus.conf
@@ -27,7 +27,7 @@ server {
     return 500;
   }
 
-  location /prometheus {
+  location /metrics {
     access_log off;
     content_by_lua_block {
       metric_connections:set(ngx.var.connections_reading, {"reading"})
