--- a/hello-bff/src/main/resources/application.properties
+++ b/hello-bff/src/main/resources/application.properties
@@ -2,3 +2,4 @@ server.port=9001
 server.error.whitelabel.enabled=false
 management.endpoints.web.base-path=/
 management.endpoints.web.exposure.include=prometheus
+management.endpoints.web.path-mapping.prometheus=metrics
