--- a/kubernetes/frontend.yaml
+++ b/kubernetes/frontend.yaml
@@ -5,10 +5,10 @@ metadata:
   name: frontend-deployment
   namespace: hello
 spec:
+  replicas: 2
   selector:
     matchLabels:
       app: hello_frontend
-  replicas: 2
   template:
     metadata:
       labels:
@@ -33,6 +33,7 @@ spec:
   selector:
     app: hello_frontend
   ports:
-    - protocol: TCP
-      port: 80
+    - port: 80
       targetPort: 9000
+      protocol: TCP
+      name: http
