--- a/kubernetes/prometheus.yaml
+++ b/kubernetes/prometheus.yaml
@@ -69,6 +69,7 @@ spec:
   selector:
     app: hello_prometheus
   ports:
-    - protocol: TCP
-      port: 80
+    - port: 80
       targetPort: 9090
+      protocol: TCP
+      name: http
