--- a/kubernetes/ingress.yaml
+++ b/kubernetes/ingress.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: foo.127.0.0.1.nip.io
+    - host: foo.k8s.io
       http:
         paths:
           - path: /
@@ -17,7 +17,7 @@ spec:
                 name: frontend-service
                 port:
                   number: 80
-    - host: bff.127.0.0.1.nip.io
+    - host: bff.k8s.io
       http:
         paths:
           - path: /
@@ -27,7 +27,7 @@ spec:
                 name: bff-service
                 port:
                   number: 80
-    - host: prom.127.0.0.1.nip.io
+    - host: prom.k8s.io
       http:
         paths:
           - path: /
@@ -37,7 +37,7 @@ spec:
                 name: prometheus-service
                 port:
                   number: 80
-    - host: grafana.127.0.0.1.nip.io
+    - host: graf.k8s.io
       http:
         paths:
           - path: /
